--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- このサイトは何か　説明する場所 -->
-  <meta name="description" content="月洞昇道の自己紹介">
-  <!-- タイトルの設定 -->
-  <title>PORTFOLIO</title>
-  <!-- スタイルシート -->
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!--
+
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- このサイトは何か　説明する場所 -->
+    <meta name="description" content="月洞昇道の自己紹介">
+    <!-- タイトルの設定 -->
+    <title>PORTFOLIO</title>
+    <!-- スタイルシート -->
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+    <!--
     headerタグの作成
     ・ロゴの設定をします
     ・h1タグとspanタグを使っていきます
   -->
-  <header>
-    <h1 class="block-header">
-      <a href="">
-        <span class="color-green">P</span>ortfolio
-      </a>
-    </h1>
-  </header>
+    <header>
+      <h1 class="block-header">
+        <a href="">
+          <span class="color-green">P</span>ortfolio
+        </a>
+      </h1>
+    </header>
 
-  <!-- 
+    <!--
     mainタグの作成
     ・profile用とwork用を作成する
     →divタグを使っていきます
-   -->
-   <div class="block-main">
-     <!-- 
-       profileの箱
+    -->
+    <div class="block-main">
+      <!--
+        profileの箱
       -->
       <div class="box-profile">
         <h2 class="sub-title"><span class="color-green">p</span>rofile</h2>
         <div class="item-list">
           <img src="img/profile.png" alt="プロフィール画像">
           <b>月洞　昇道</b>
-          <p class="color-green">HTML/CSS/PHP/MySQL/Laravel/AdobeXD</p>
+          <p class="color-green">HTML/CSS/PHP/MySQL/Laravel/Adobe XD</p>
           <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
         </div>
         <ul class="icon-list">
@@ -55,6 +57,53 @@
           </li>
         </ul>
       </div>
-   </div>
-</body>
+
+      <!--
+        worksの箱
+      -->
+      <div class="box-works">
+        <h2 class="sub-title"><span class="color-green">W</span>orks</h2>
+        <ul class="works-list">
+          <li>
+            <img src="img/work_1.png" alt="Twitterクローンの画像">
+            <h3>Twitterクローン</h3>
+            <span>HTML / CSS / PHP / MySQL</span>
+            <div class="link">
+              <a href="">Webサイト</a>
+              <a href="">Github</a>
+            </div>
+          </li>
+          <li>
+            <img src="img/work_1.png" alt="Twitterクローンの画像">
+            <h3>Twitterクローン</h3>
+            <span>HTML / CSS / PHP / MySQL</span>
+            <div class="link">
+              <a href="">Webサイト</a>
+              <a href="">Github</a>
+            </div>
+          </li>
+          <li>
+            <img src="img/work_1.png" alt="Twitterクローンの画像">
+            <h3>Twitterクローン</h3>
+            <span>HTML / CSS / PHP / MySQL</span>
+            <div class="link">
+              <a href="">Webサイト</a>
+              <a href="">Github</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+
+    <!--
+      footerタグの作成
+      ・copyrightの設定
+      →pタグを使います
+    -->
+    <footer class="block-footer">
+      <p>Copyright ©️ TECH I.S., Inc</p>
+    </footer>
+  </body>
+
 </html>
