--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- レスポンシブデザインの設定
+        .viewportの設定 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- このサイトは何か　説明する場所 -->
     <meta name="description" content="月洞昇道の自己紹介">
