--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <img src="img/profile.png" alt="プロフィール画像">
           <b>月洞　昇道</b>
           <p class="color-green">HTML/CSS/PHP/MySQL/Laravel/Adobe XD</p>
-          <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+          <p>ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが</p>
         </div>
         <ul class="icon-list">
           <li>
